--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -119,21 +119,21 @@
           {% endfor %}
           {% if site.search_enabled %}
             <!-- Search -->
-            <!--
+            {% comment %}
             <li class="nav-item">
               <button id="search-toggle" title="Search" onclick="openSearchModal()">
                 <span class="nav-link">ctrl k <i class="ti ti-search"></i></span>
               </button>
             </li>
-            -->
+            {% endcomment %}
           {% endif %}
           {% if site.enable_darkmode %}
             <!-- Toogle theme mode -->
             <li class="toggle-container">
               <button id="light-toggle" title="Change theme">
-              <!--
+                {% comment %}
                 <i class="ti ti-sun-moon" id="light-toggle-system"></i>
-              -->
+                {% comment %}
                 <i class="ti ti-moon-filled" id="light-toggle-dark"></i>
                 <i class="ti ti-sun-filled" id="light-toggle-light"></i>
               </button>
