--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -133,7 +133,7 @@
               <button id="light-toggle" title="Change theme">
                 {% comment %}
                 <i class="ti ti-sun-moon" id="light-toggle-system"></i>
-                {% comment %}
+                {% endcomment %}
                 <i class="ti ti-moon-filled" id="light-toggle-dark"></i>
                 <i class="ti ti-sun-filled" id="light-toggle-light"></i>
               </button>
